--- a/3.3.html
+++ b/3.3.html
@@ -34,10 +34,61 @@
 <!-- Conrainer 00 -->
 <div class="row">
 <div class="container00">
+    <p>Es menester que se tenga presente que la educación es el objeto de estudio de la pedagogía, por lo tanto, también es importante que se conozca que existe la tipología de la educación, pero antes de conocerla será importante discernir el concepto de educación.
+    La palabra educación, proviene del latín educare, que significa: alimentar, guiar.</p>
+    <p>Pero también la palabra educación proviene de otra palabra en latín educere, que significa “sacar desde adentro”, y ¿qué se saca desde adentro? Pues lo mejor de cada quién.</p>
+    <p>Dentro de esta definición, se hace necesario mencionar la aportación al respecto del sociólogo Émile Durkheim, que dice asi: Un proceso de transmisión cultural de una generación a otra, de las generaciones adultas a las generaciones jóvenes; es un proceso social tanto por su origen como por sus funciones.</p>
+    <p>Por lo tanto, la educación es un proceso que busca guiar y hacer mejores personas en una sociedad para cubrir sus necesidades.</p>
+</div>
+</div>
 
+<div class="row">
+    <div>
+    <p>La tipología de la educación es Educación Formal, Educación No formal y Educación Informal.</p>
+    </div>
+<div id="accordion" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+ 	<div class="card" id="accordion1">
+    <div class="card-header" id="heading1" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+	<h6>Educación Formal:</h6><i class="fas fa-plus-circle" style="cursor:pointer"></i>
+    </div>
+    <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
+	<div class="card-body">
+	<p>Se da en el SEN, es dirigida a todos los ciudadanos, sistemática, estructurada, secuencial, obligatoria y legítima a través de un certificado.</p>
+  	</div>
+    </div>
+  	</div>
+		
+ 	<div class="card" id="accordion2">
+    <div class="card-header" id="heading2" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+	<h6>Educación Informal:</h6><i class="fas fa-plus-circle" style="cursor:pointer"></i>
+    </div>
+    <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordion">
+	<div class="card-body">
+	<p>Se presenta en la casa, en la iglesia, en el club social, con los amigos, etc. Se aprende conforme a lo que se platica y se comparte entre las personas.</p>
+  	</div>
+    </div>
+  	</div>
+		
+ 	<div class="card" id="accordion3">
+    <div class="card-header" id="heading3" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+	<h6>Educación No Formal:</h6><i class="fas fa-plus-circle" style="cursor:pointer"></i>
+    </div>
+    <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
+	<div class="card-body">
+	<p>Es la que permite la actualización, principalmente en las organizaciones por medio de la capacitación, pero, además, se considera la educación continua, que considera los cursos, talleres y diplomados.
+    No es obligatoria para todos los ciudadanos, solo se considera para los interesados dentro de las organizaciones e instituciones educativas.</p>
+  	</div>
+    </div>
+  	</div>
 </div>
 </div>
-    
+
+<div class="row">
+<div class="container03">
+    <p>Ahora te podrás acercar desde la mirada de los investigadores sobre la práctica docente a nivel superior y su vínculo con la evaluación a través del siguiente artículo <a href="" style="color: #0181A8">Análisis de la práctica educativa de los docentes: pensamiento, interacción y reflexión,</a> de García-Cabrero, Loredo y Carranza.</p>
+    <p>Por otra parte, la acción psicopedagógica se vincula principalmente a la planificación de procesos educativos, entendiendo planificación como un acto en el que se incluye el análisis de necesidades, establecimiento de objetivos, metas, diseño y evaluación; su fin central es contribuir al mejoramiento del acto educativo. Como podrás revisar en el siguiente artículo <a href="" style="color: #0181A8">Qué es la intervención psicopedagógica: definición, principios y componentes.</a></p>
+</div>
+</div>
 
     
 
